<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * MIT License
 *
 * Copyright (c) 2016 Hishmad Abubakar Al-Amudi
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */
 -->
<LinearLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/adapter_view_item_list_root_height"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/image_frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/adapter_view_item_list_frame_layout_height">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:id="@+id/sub_text_detail"
            android:padding="@dimen/adapter_view_item_list_padding_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/item_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adapter_view_item_list_item_desc"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/adapter_view_item_list_text_size_12"/>

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adapter_view_item_list_price"
                android:textColor="@color/burgundy"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/adapter_view_item_list_text_size_8"/>

        </LinearLayout>


        <ImageButton
            android:paddingStart="@dimen/adapter_view_item_list_padding_full"
            android:paddingTop="@dimen/adapter_view_item_list_padding_full"
            android:paddingEnd="@dimen/adapter_view_item_list_padding_full"
            android:paddingBottom="@dimen/adapter_view_item_list_padding_full"
            android:layout_gravity="end"
            android:background="@color/white"
            android:id="@+id/item_popup_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/adapter_view_item_list_popup_menu"
            android:src="@mipmap/ic_action_navigation_more_vert" />

    </FrameLayout>

</LinearLayout>